unpackaged/main/default/objects/Harmonic_Company_Profile__c/Harmonic_Company_Profile__c.object-meta.xml
<CustomObject>
    <label>Harmonic Company Profile</label>
    <nameField>
        <label>Harmonic Company Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harmonic Company Profiles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>