unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Address_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Address_Formatted__c</fullName>
    <inlineHelpText>Full address for the company</inlineHelpText>
    <label>Address (Formatted)</label>
    <type>TextArea</type>
</CustomField>