unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo__c</fullName>
    <formula>IMAGE(Logo_URL__c,Name,192,192)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Logo</label>
    <type>Text</type>
</CustomField>