unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>Country component of the company address</inlineHelpText>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>