unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Crunchbase_Profile__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_Profile__c</fullName>
    <inlineHelpText>Link to the company&#39;s Crunchbase profile</inlineHelpText>
    <label>Crunchbase: Profile</label>
    <type>Url</type>
</CustomField>