unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <inlineHelpText>The type of customers that this company serves</inlineHelpText>
    <label>Customer Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>