unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Do_Not_Update_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Account_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked TRUE, Harmonic sync will not update the Account Name of the related Account record.</description>
    <inlineHelpText>If checked TRUE, Harmonic sync will not update the Account Name of the associated Account record.</inlineHelpText>
    <label>Do Not Update Account Name</label>
    <type>Checkbox</type>
</CustomField>