unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Do_Not_Update_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Employee_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked TRUE, Harmonic sync will not update the Employees of the associated Account.</description>
    <inlineHelpText>If checked TRUE, Harmonic sync will not update the Employees of the associated Account.</inlineHelpText>
    <label>Do Not Update Employee Count</label>
    <type>Checkbox</type>
</CustomField>