unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Do_Not_Update_LinkedIn_Company_Page__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_LinkedIn_Company_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked TRUE, Harmonic sync will not update the LinkedIn Company Page of the related Account record.</description>
    <inlineHelpText>If checked TRUE, Harmonic sync will not update the LinkedIn Company Page of the related Account record.</inlineHelpText>
    <label>Do Not Update LinkedIn Company Page</label>
    <type>Checkbox</type>
</CustomField>