unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Do_Not_Update_Website__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked TRUE, Harmonic sync will not update the Website of the related Account record.</description>
    <inlineHelpText>If checked TRUE, Harmonic sync will not update the Website of the related Account record.</inlineHelpText>
    <label>Do Not Update Website</label>
    <type>Checkbox</type>
</CustomField>