unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Facebook_Followers_14D_Ago__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Followers_14D_Ago__c</fullName>
    <label>Facebook: Followers 14D Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>