unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Facebook_Followers_14D_Pct_Chg__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Followers_14D_Pct_Chg__c</fullName>
    <label>Facebook: Followers 14D % Chg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>