unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Facebook_Followers_365D_Num_Chg__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Followers_365D_Num_Chg__c</fullName>
    <label>Facebook: Followers 365D # Chg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>