unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Facebook_Profile__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Profile__c</fullName>
    <inlineHelpText>Link to the company&#39;s Facebook profile</inlineHelpText>
    <label>Facebook: Profile</label>
    <type>Url</type>
</CustomField>