unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Attribute_Null_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Attribute_Null_Status__c</fullName>
    <label>Funding: Attribute Null Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>