unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Investors__c.field-meta.xml
<CustomField>
    <fullName>Funding_Investors__c</fullName>
    <inlineHelpText>List of all known external investors in the company</inlineHelpText>
    <label>Funding: Investors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>