unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Last_At__c.field-meta.xml
<CustomField>
    <fullName>Funding_Last_At__c</fullName>
    <inlineHelpText>The date of the last external funding round</inlineHelpText>
    <label>Funding: Last At</label>
    <type>Date</type>
</CustomField>