unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Last_Total__c.field-meta.xml
<CustomField>
    <fullName>Funding_Last_Total__c</fullName>
    <inlineHelpText>Total amount of the last external funding round</inlineHelpText>
    <label>Funding: Last Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>