unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Last_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Last_Type__c</fullName>
    <inlineHelpText>Details about the last external funding round</inlineHelpText>
    <label>Funding: Last Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>