unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Outbound_Score__c.field-meta.xml
<CustomField>
    <fullName>Funding_Outbound_Score__c</fullName>
    <formula>IF(
 Funding_Last_Total__c&gt;=5000000,
 IF(
  Funding_Last_Days_Ago__c &lt;= 45,
  5,
  IF(
   Funding_Last_Days_Ago__c &lt;= 90,
   4,
   IF(
    Funding_Last_Days_Ago__c &lt;= 180,
    3,
    2
   )
  )
 ),
 IF(Ownership_Status__c = &#39;Public&#39;,3,1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The funding component to the outbound score</inlineHelpText>
    <label>Funding: Outbound Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>