unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funding_Stage__c</fullName>
    <inlineHelpText>Stated stage (e.g., &quot;Series A&quot;) of the last external funding round</inlineHelpText>
    <label>Funding: Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>