unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Total_14D_Num_Chg__c.field-meta.xml
<CustomField>
    <fullName>Funding_Total_14D_Num_Chg__c</fullName>
    <label>Funding: Total 14D # Chg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>