unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Total_30D_Ago__c.field-meta.xml
<CustomField>
    <fullName>Funding_Total_30D_Ago__c</fullName>
    <label>Funding: Total 30D Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>