unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Funding_Total__c.field-meta.xml
<CustomField>
    <fullName>Funding_Total__c</fullName>
    <inlineHelpText>Total amount of funding raised by the company to date</inlineHelpText>
    <label>Funding: Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>