unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Harmonic_Company_Profile_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Harmonic_Company_Profile_ID_Case_Safe__c</fullName>
    <description>18 digit case safe record ID.</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>18 digit case safe record ID.</inlineHelpText>
    <label>Harmonic Company Profile ID (Case Safe)</label>
    <type>Text</type>
</CustomField>