unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Has_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Has_Sync_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE when a Sync Error is populated.</description>
    <inlineHelpText>Checked TRUE when a Sync Error is populated.</inlineHelpText>
    <label>Has Sync Error?</label>
    <type>Checkbox</type>
</CustomField>