unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Headcount_Total_14D_Ago__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Total_14D_Ago__c</fullName>
    <label>Headcount: Total 14D Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>