unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Headcount_Total_180D_Pct_Chg__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Total_180D_Pct_Chg__c</fullName>
    <label>Headcount: Total 180D % Chg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>