unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Headcount_Total_30D_Num_Chg__c.field-meta.xml
<CustomField>
    <fullName>Headcount_Total_30D_Num_Chg__c</fullName>
    <label>Headcount: Total 30D # Chg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>