unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Harmonic company ID</inlineHelpText>
    <label>ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>