unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Instagram_Followers_180D_Ago__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Followers_180D_Ago__c</fullName>
    <label>Instagram: Followers 180D Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>