unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Instagram_Followers_30D_Pct_Chg__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Followers_30D_Pct_Chg__c</fullName>
    <label>Instagram: Followers 30D % Chg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>