unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Is_Controlling_Profile__c.field-meta.xml
<CustomField>
    <fullName>Is_Controlling_Profile__c</fullName>
    <formula>Id=Account__r.Harmonic_Company_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if a bi-directional link exists between the Harmonic Company Profile and related Account record</inlineHelpText>
    <label>Is Controlling Profile?</label>
    <type>Checkbox</type>
</CustomField>