unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Last_Harmonic_Update_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Harmonic_Update_At__c</fullName>
    <inlineHelpText>The date and time when the Harmonic sync last ran for the record</inlineHelpText>
    <label>Last Harmonic Update At</label>
    <type>DateTime</type>
</CustomField>