unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/LinkedIn_Followers_14D_Num_Chg__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Followers_14D_Num_Chg__c</fullName>
    <label>LinkedIn: Followers 14D # Chg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>