unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/LinkedIn_Followers_90D_Pct_Chg__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Followers_90D_Pct_Chg__c</fullName>
    <label>LinkedIn: Followers 90D % Chg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>