unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <inlineHelpText>URL for the company&#39;s logo</inlineHelpText>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>