unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Status__c</fullName>
    <inlineHelpText>Current ownership structure of the company</inlineHelpText>
    <label>Ownership Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>