unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>State component of the company address</inlineHelpText>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>