unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <inlineHelpText>Street component of the company address</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>