unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error__c</fullName>
    <description>Displays sync error messages (if applicable).</description>
    <inlineHelpText>Displays sync error messages (if applicable).</inlineHelpText>
    <label>Sync Error</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>