unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Sync_Update_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Sync_Update_Account_Name__c</fullName>
    <description>Checked TRUE if `Do Not Update Account Name` is FALSE and the Account Website does not equal the Harmonic Company Profile Name.</description>
    <formula>NOT(ISBLANK(Account__c)) &amp;&amp;
Account__r.Name != Name &amp;&amp;
NOT(ISBLANK(Name)) &amp;&amp;
Do_Not_Update_Account_Name__c = FALSE &amp;&amp;
LEFT(Name, 3) != &#39;a3U&#39;</formula>
    <inlineHelpText>Checked TRUE if `Do Not Update Account Name` is FALSE and the Account Website does not equal the Harmonic Company Profile Name.</inlineHelpText>
    <label>Sync: Update Account Name?</label>
    <type>Checkbox</type>
</CustomField>