unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Sync_Update_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Sync_Update_Shipping_Address__c</fullName>
    <description>Checked TRUE if `Do Not Update Shipping Address` is FALSE and the Account Shipping City does not equal the Harmonic Company City.</description>
    <formula>NOT(ISBLANK(Account__c)) &amp;&amp;
(
Account__r.ShippingCity != City__c ||
(ISBLANK(Account__r.ShippingCountry) &amp;&amp; NOT(ISBLANK(Country__c)))
)
&amp;&amp; NOT(ISBLANK(Country__c))
&amp;&amp; Do_Not_Update_Shipping_Address__c = FALSE</formula>
    <inlineHelpText>Checked TRUE if `Do Not Update Shipping Address` is FALSE and the Account Shipping City does not equal the Harmonic Company City.</inlineHelpText>
    <label>Sync: Update Shipping Address?</label>
    <type>Checkbox</type>
</CustomField>