unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Sync_Update_Website__c.field-meta.xml
<CustomField>
    <fullName>Sync_Update_Website__c</fullName>
    <description>Checked TRUE if `Do Not Update Website` is FALSE and the Account Website does not equal the Harmonic Company Profile Website URL.</description>
    <formula>NOT(ISBLANK(Account__c)) &amp;&amp;
Account__r.Website != Website_URL__c &amp;&amp;
NOT(ISBLANK(Website_URL__c)) &amp;&amp;
Do_Not_Update_Website__c = FALSE</formula>
    <inlineHelpText>Checked TRUE if `Do Not Update Website` is FALSE and the Account Website does not equal the Harmonic Company Profile Website URL.</inlineHelpText>
    <label>Sync: Update Website?</label>
    <type>Checkbox</type>
</CustomField>