unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Twitter_Follower_Count__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Follower_Count__c</fullName>
    <inlineHelpText>Current number of followers the company has on Twitter</inlineHelpText>
    <label>Twitter: Follower Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>