unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Twitter_Followers_180D_Pct_Chg__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Followers_180D_Pct_Chg__c</fullName>
    <label>Twitter: Followers 180D % Chg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>