unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Twitter_Followers_90D_Ago__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Followers_90D_Ago__c</fullName>
    <label>Twitter: Followers 90D Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>