unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Twitter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Profile__c</fullName>
    <inlineHelpText>Link to the company&#39;s Twitter profile</inlineHelpText>
    <label>Twitter: Profile</label>
    <type>Url</type>
</CustomField>