unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/View_in_Harmonic__c.field-meta.xml
<CustomField>
    <fullName>View_in_Harmonic__c</fullName>
    <formula>HYPERLINK(&quot;https://console.harmonic.ai/dashboard/company/&quot;&amp;ID__c, &quot;Link&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opens this company in Harmonic.ai</inlineHelpText>
    <label>View in Harmonic</label>
    <type>Text</type>
</CustomField>