unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>Website for the company</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>