unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Website_Domain__c.field-meta.xml
<CustomField>
    <fullName>Website_Domain__c</fullName>
    <inlineHelpText>Domain extracted from the company website</inlineHelpText>
    <label>Website Domain</label>
    <type>Url</type>
</CustomField>