unpackaged/main/default/objects/Harmonic_Company_Profile__c/fields/Website_Is_Broken__c.field-meta.xml
<CustomField>
    <fullName>Website_Is_Broken__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if the provided website does not resolve</inlineHelpText>
    <label>Website: Is Broken?</label>
    <type>Checkbox</type>
</CustomField>