unpackaged/main/default/objects/Harmonic_Company_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Entity_URN__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Legal_Name__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>